My first approach

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   UnderStrap Child
+ Theme Name:   Yofisio dev
  Theme URI:    https://www.understrap.com
- Description:  UnderStrap Child Theme
+ Description:  Yofisio dev theme
  Author:       Holger Koenemann
  Author URI:   http://www.holgerkoenemann.de
  Template:     understrap
