--- a/sass/yofisio/components/phone-cta.sass
+++ b/sass/yofisio/components/phone-cta.sass
@@ -1,9 +1,41 @@
 #phone-fixed
+  z-index: 1001!important
   position: fixed
-  top: 100px
+  bottom: 50px
   right: 0
   .btn-phone
-    z-index: 1001!important
     margin-right: -30px
   .btn-phone-text
     z-index: 1000
+
+  .btn-cool 
+    text-align: left
+    height: 55px
+    position: relative
+    text-shadow: 1px 1px 2px rgba(255,255,255,.1)
+    color: rgba(255,255,255,.9)
+    border-radius: 0px
+    transition: all .3s ease-in
+    i
+      position: absolute
+      left: 0px
+      top: 0px
+      font-size: 20px
+      display: block
+      height: 55px
+      width: 55px
+      vertical-align: middle
+      line-height: 55px
+      text-align: center
+      background-color: rgba(0,0,0,.1)
+    small
+      display: block
+    div
+      padding-left: 50px
+      text-align: center
+    &:hover
+      text-shadow: 1px 1px 2px rgba(255,255,255,.5)
+      color: rgba(0,0,0,.8)
+      transition: all .3s ease-in
+      i
+        font-size: 30px
