--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -32,6 +32,7 @@ section
     h2
         margin-bottom: 1.5rem
         padding: .5rem
+        text-align: center
         background-color: rgba($brand-primary, 0.85)!important
 
 .bg-white
@@ -79,6 +80,7 @@ section
     margin-bottom: 1rem
     font-variant: small-caps
     background-color: rgba($brand-info, 0.65)!important
+    color: #fff
 
 
 +media-breakpoint-down(md) 
@@ -98,3 +100,5 @@ section
                 margin-right: 0px
 
 
+.elementor-column-gap-default>.elementor-row>.elementor-column>.elementor-element-populated
+    padding: 0!important
