--- a/sass/yofisio/components/contacto.sass
+++ b/sass/yofisio/components/contacto.sass
@@ -3,7 +3,10 @@ section#contacto
         width: 100%
         height: 400px
         +media-breakpoint-up(md)
-            height: 100%
+            height: 85%
+
+    .row > *
+        margin-bottom: 1.5rem
 
 .gm-style-cc, .gmnoprint
     display: none
