--- a/sass/yofisio/components/footer.sass
+++ b/sass/yofisio/components/footer.sass
@@ -2,9 +2,15 @@ footer
   padding-bottom: 2rem
   padding-top: 2rem
   *
-    color: rgba(255,255,255,.85)!important
+    color: rgba(255,255,255,.65)
+    line-height: 2rem
   h4
     font-variant: small-caps
+  h1, h1, h3, h4, h5, h6
+    color: rgba(255,255,255,1)
+  #social-menu *
+    line-height: initial
+    color: rgba(255,255,255,.65)!important
   #categories-menu-footer
     padding-left: 0
     .menu-item
@@ -20,3 +26,8 @@ footer
       max-width: 250px
   .row > *
     margin-bottom: 1rem
+  .fa
+    font-size: 20px
+    vertical-align: text-top
+  a:hover, a:active, a:focus
+    color: #fff
