--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -3,6 +3,8 @@
 +fontFace('AvenirNextLTPro-Cn','../fonts/AvenirNextLTPro-Cn')
 +fontFace('AvenirNextLTPro-Bold','../fonts/AvenirNextLTPro-Bold')
 
+html
+    overflow-x: hidden
 *
     font-family: 'AvenirNextLTPro-Regular'
 h1, h2, h3, h4, h5, h6
@@ -82,6 +84,9 @@ section
     background-color: rgba($brand-info, 0.65)!important
     color: #fff
 
+
+.jumbotron 
+    padding: 2rem 0rem
 
 +media-breakpoint-down(md) 
     .card-deck
