--- a/sass/yofisio/components/header.sass
+++ b/sass/yofisio/components/header.sass
@@ -44,7 +44,9 @@
     position: relative
     .nav-link
       display: inline-block
-      padding-right: 25px
+    &:not(:last-child)
+      .nav-link:not(.dropdown-toggle)
+        margin-right: 22px
     .dropdown-toggle
       position: absolute
       padding-right: 8px
