Remove full width image

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -104,3 +104,6 @@ section
 
 .elementor-column-gap-default>.elementor-row>.elementor-column>.elementor-element-populated
     padding: 0!important
+
+.elementor-widget-text-editor
+    color: inherit!important
