Maps text style

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -109,5 +109,9 @@ section
 .elementor-widget-text-editor
     color: inherit!important
 
-.gm-style-iw *
-    color: #000
+.gm-style-iw
+    *
+        color: #000
+        line-height: initial
+    a
+        color: initial
