--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -77,6 +77,7 @@ section
         font-family: AvenirNextLTPro-Cn
 
 .highlight
+    text-align: center
     font-weight: 700
     padding: .5rem 1rem
     margin-bottom: 1rem
