--- a/sass/yofisio/components/phone-cta.sass
+++ b/sass/yofisio/components/phone-cta.sass
@@ -2,10 +2,11 @@
   z-index: 1001!important
   position: fixed
   bottom: 50px
-  right: 0
+  right: -30px
   .btn-cool 
     text-align: left
     height: 70px
+    padding-right: 50px
     position: relative
     text-shadow: 1px 1px 2px rgba(255,255,255,.1)
     color: rgba(255,255,255,.9)
