Blog entries first approach

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -23,6 +23,7 @@ section
 @import "components/breadcrumbs"
 @import "components/phone-cta"
 @import "components/content-header"
+@import "components/blog-grid"
 @import "components/equipo"
 @import "components/contacto"
 @import "components/img-half"
@@ -132,3 +133,6 @@ section
                     margin-right: 15px!important
                 & > .elementor-column:not(:last-child) .elementor-column-wrap
                     margin-left: 15px!important
+
+.foreground
+    z-index: 9999
