--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -1,13 +1,29 @@
-#main.container
+.container-main, .container-category
   width: 100%
+.container-category
+  padding: 0
+
 .article-wrapper
   position: relative
+  float: left
+  width: 100%
+  &:before
+    content: ""
+    display: block
+    padding-top: 70%
+  header.entry-header h3
+    font-size: 3rem
+    font-weight: 600
   article
-    .container
-      padding: 0
-      width: 100%
-      height: 100%
-    margin: .5rem 0
+    &:hover
+      transform: scale(1.05, 1.05)
+    transition: all .5s
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    margin: .5rem
     padding: .75rem
     background-repeat: no-repeat
     background-size: cover
@@ -19,42 +35,61 @@
       position: absolute
       bottom: 0
       right: 0
-  +media-breakpoint-up(md)
-    article
-      margin: .5rem
-    float: left
-    &:before
-      content: ""
-      display: block
-      padding-top: 70%
-    &:first-child
-      width: 100%
-      header.entry-header h2
-        font-size: 3rem
-    &:not(:first-child)
+  .container
+    padding: 0
+    width: 100%
+    height: 100%
+    a
+      position: relative
+      z-index: 2
+
+
+.container-main
+  .article-wrapper
+    +media-breakpoint-up(md)
+      &:first-child
+        width: 100%
+      &:not(:first-child)
+        width: 50%
+        font-size: .7rem!important
+        header.entry-header h3
+          font-size: 1.5rem
+    +media-breakpoint-up(lg)
+      &:first-child
+        width: 50%
+      &:not(:first-child)
+        width: 25%
+        font-size: .5rem!important
+        header.entry-header h3
+          font-size: 1.25rem
+
+.container-category
+  .article-wrapper
+    +media-breakpoint-up(md)
       width: 50%
       font-size: .7rem!important
-      header.entry-header h2
+      header.entry-header h3
         font-size: 1.5rem
-        font-weight: 600
-    article
-      position: absolute
-      top: 0
-      left: 0
-      right: 0
-      bottom: 0
-  +media-breakpoint-up(lg)
-    &:first-child
+    +media-breakpoint-up(lg)
       width: 50%
-    &:not(:first-child)
-      width: 25%
       font-size: .5rem!important
-      header.entry-header h2
+      header.entry-header h3
         font-size: 1.25rem
-        font-weight: 600
+
 
 div[aria-label="Page Navigation"]
   display: flex
   ul.pagination
       margin-left: auto
       margin-right: auto
+
+
+.link-entry:before
+  bottom: 0
+  left: 0
+  content: ""
+  display: block
+  height: 100%
+  width: 100%
+  position: absolute
+  z-index: 1
