--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -42,6 +42,11 @@
     a
       position: relative
       z-index: 2
+      color: #fff
+      text-shadow: -1px 2px 0 rgba(0,0,0,.23)
+      &:hover
+        color: $brand_primary
+        text-decoration: none
 
 
 .container-main
