--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -18,6 +18,7 @@ section
             text-align: justify
 
 @import "components/social-menu"
+@import "components/social-share"
 @import "components/header"
 @import "components/categories-menu"
 @import "components/breadcrumbs"
