--- a/sass/yofisio/components/social-share.sass
+++ b/sass/yofisio/components/social-share.sass
@@ -1,9 +1,27 @@
 .cresta-the-count
   background: $brand-primary!important
 
-.inline-social
+@media (max-width: 768px)
   #crestashareicon
+    display: none !important
+
+.inline-social
+  margin: 0 auto!important
+  display: table
+  #crestashareicon
+    all: unset!important
     left: 0
     position: relative
-    & > *
+
+    & > .sbutton
       clear: initial!important
+      margin: 10px 5px!important
+    &.cresta-share-icon .sbutton i
+      padding: 0!important
+      line-height: 40px!important
+      width: 40px!important
+      height: 40px!important
+      text-align: center!important
+      padding: 11px 0
+    .cresta-the-count
+      display: inline-block!important
