--- a/sass/yofisio/components/social-share.sass
+++ b/sass/yofisio/components/social-share.sass
@@ -18,10 +18,10 @@
       margin: 10px 5px!important
     &.cresta-share-icon .sbutton i
       padding: 0!important
-      line-height: 40px!important
       width: 40px!important
       height: 40px!important
       text-align: center!important
-      padding: 11px 0
+      padding: 11px 0!important
+      line-height: 1em!important
     .cresta-the-count
       display: inline-block!important
