--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -24,6 +24,7 @@ section
 @import "components/breadcrumbs"
 @import "components/phone-cta"
 @import "components/content-header"
+@import "components/comments"
 @import "components/blog-grid"
 @import "components/equipo"
 @import "components/contacto"
