Slight color change

--- a/sass/yofisio/_variables.scss
+++ b/sass/yofisio/_variables.scss
@@ -6,8 +6,8 @@
 // Just add your color code here, compile the theme.scss file to change this color everywhere
 
 
-$brand-primary:         #CAD54B; //#ff6d5a
-$brand-info:         #2584C0; //#ff6d5a
-$brand-warning:         #ED7833; //#ff6d5a
+$brand-primary:         #C7D443; //#ff6d5a
+$brand-info:         #1B80BF; //#ff6d5a
+$brand-warning:         #EC7623; //#ff6d5a
 
 $inverted: #233D55;
