More opaque card text

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -73,6 +73,9 @@ section
 .card-deck
     margin-bottom: 1rem
 
+.card-inverse
+    color: rgba(255,255,255,.85)
+
 .blockquote
     border-left: .25rem solid rgba($brand-warning, .85)
     font-family: AvenirNextLTPro-Cn
