--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -26,6 +26,7 @@ section
 @import "components/content-header"
 @import "components/comments"
 @import "components/blog-grid"
+@import "components/blog-nav"
 @import "components/equipo"
 @import "components/contacto"
 @import "components/img-half"
