--- a/sass/yofisio/components/comments.sass
+++ b/sass/yofisio/components/comments.sass
@@ -1,8 +1,18 @@
-.comments-area
-  padding: .75rem 0
 
-.comment-respond
-  padding: .75rem 0
+#commentform
+  label
+    font-weight: bold
 
-.comment
-  padding: .75rem 0
+ol.comment-list
+  padding: 0
+  .comment
+    @for $var from 1 through 5
+      &.depth-#{$var}
+        margin-left: $var*20px - 20px
+        border-left: 4px solid rgba($brand_info, (1.1 - .2*$var))
+    margin: .75rem 0
+    img.avatar
+      height: 64px!important
+      width: 64px!important
+      padding: 0
+      margin: 1rem
