Several changes I can't remember :)

--- a/sass/yofisio/components/header.sass
+++ b/sass/yofisio/components/header.sass
@@ -46,8 +46,7 @@
     position: relative
     .nav-link
       display: inline-block
-    &:not(:last-child)
-      .nav-link:not(.dropdown-toggle)
+      &:not(.dropdown-toggle)
         margin-right: 22px
     .dropdown-toggle
       position: absolute
