--- a/sass/yofisio/components/comments.sass
+++ b/sass/yofisio/components/comments.sass
@@ -6,11 +6,13 @@
 ol.comment-list
   padding: 0
   .comment
-    @for $var from 1 through 5
+    @for $var from 1 through 3
       &.depth-#{$var}
-        margin-left: $var*20px - 20px
+        margin-left: 20px
         border-left: 4px solid rgba($brand_info, (1.1 - .2*$var))
     margin: .75rem 0
+    &.depth-1
+      margin-left: 0
     img.avatar
       height: 64px!important
       width: 64px!important
@@ -20,3 +22,5 @@ ol.comment-list
       padding-left: 1rem
 .comments-area
   margin-top: 2rem
+.comment-respond
+  padding-left: 1rem
