--- a/sass/yofisio/components/equipo.sass
+++ b/sass/yofisio/components/equipo.sass
@@ -1,6 +1,6 @@
 section.member
   img
-    padding-bottom: 1rem
+    margin-bottom: 1rem
   +media-breakpoint-up(sm)
     [class^="float-"]
       max-width: 40%
@@ -16,5 +16,5 @@ section.member
 
 figure
   img
-    padding-top: 1rem
-    padding-bottom: 1rem
+    margin-top: 1rem
+    margin-bottom: 1rem
