--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -145,3 +145,6 @@ section
 
 .zoomOutLeft, .zoomInLeft, .zoomOutRight, .zoomInRight
     animation-duration: .3s
+
+.card, section h2, section img, .highlight, .map
+    box-shadow: 2px 2px 5px rgba(0,0,0,.23)!important
