--- a/sass/yofisio/components/comments.sass
+++ b/sass/yofisio/components/comments.sass
@@ -18,6 +18,7 @@ ol.comment-list
       width: 64px!important
       padding: 0
       margin: .75rem
+      box-shadow: none!important
     .comment-content, .comment-author
       padding-left: 1rem
 .comments-area
