Fixed map shadow

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -148,3 +148,5 @@ section
 
 .card, section h2, section img, .highlight, .map, main.container-main article
     box-shadow: 2px 2px 5px rgba(0,0,0,.23)!important
+.map img
+    box-shadow: none!important
