Smaller font in mobile

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -5,6 +5,9 @@
 
 html
     overflow-x: hidden
+    font-size: 14px
+    +media-breakpoint-up(md)
+        font-size: 16px
 *
     font-family: 'AvenirNextLTPro-Regular'
 h1, h2, h3, h4, h5, h6
