--- a/sass/yofisio/components/categories-menu.sass
+++ b/sass/yofisio/components/categories-menu.sass
@@ -23,5 +23,9 @@
 	z-index: 2000
 
 #categories-menu
+	font-size: 1.25rem
 	+media-breakpoint-up(sm)
 		margin: auto
+		font-size: 1.1rem
+	+media-breakpoint-up(md)
+		font-size: 1.25rem
