Screenshot / dist gulp task

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   Yofisio dev
+ Theme Name:   Yofisio
  Theme URI:    https://www.understrap.com
- Description:  Yofisio dev theme
+ Description:  Yofisio theme
  Author:       Holger Koenemann
  Author URI:   http://www.holgerkoenemann.de
  Template:     understrap
