--- a/sass/yofisio/components/phone-cta.sass
+++ b/sass/yofisio/components/phone-cta.sass
@@ -3,6 +3,7 @@
   position: fixed
   bottom: 50px
   right: -30px
+  box-shadow: 2px 2px 5px rgba(0,0,0,.23)!important
   .btn-cool 
     text-align: left
     height: 70px
