--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -74,6 +74,12 @@ section
     &:first-child
         margin-top: 2rem
 
+
+.card-columns
+    .card
+        margin-bottom: .75rem
+        box-shadow: none!important
+
 .card-deck
     margin-bottom: 1rem
 
