--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -104,3 +104,9 @@ div[aria-label="Page Navigation"]
   width: 100%
   position: absolute
   z-index: 1
+
+.bg-gradient
+  background: -moz-linear-gradient(top, rgba($brand-info,0.9) 0%, rgba($brand-info,0.6) 50%, rgba($brand-info,0.5) 100%)
+  background: -webkit-linear-gradient(top, rgba($brand-info,0.9) 0%,rgba($brand-info,0.6) 50%,rgba($brand-info,0.5) 100%)
+  background: linear-gradient(to bottom, rgba($brand-info,0.9) 0%,rgba($brand-info,0.6) 50%,rgba($brand-info,0.5) 100%)
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2288caE6', endColorstr='#2288ca80',GradientType=0 )
