Blog Navigation styles

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -35,6 +35,7 @@ section
 @import "components/img-half"
 @import "components/testimonios"
 @import "components/footer"
+@import "components/cookies"
 
 section
     margin-bottom: 2rem
