--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -93,6 +93,10 @@ div[aria-label="Page Navigation"]
   ul.pagination
     margin-left: auto
     margin-right: auto
+    margin-top: .5rem
+    .page-link
+      border: none
+      border-radius: 0
 
 
 .link-entry:before
