--- a/sass/yofisio/components/header.sass
+++ b/sass/yofisio/components/header.sass
@@ -67,6 +67,7 @@
 
 .jumbotron 
   background-repeat: no-repeat
+  border-radius: 0
   h1
     font-size: 2.5rem 
     text-shadow: 2px 2px 5px rgba(255,255,255,.23)!important
