--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -5,9 +5,9 @@
 
 html
     overflow-x: hidden
-    font-size: 14px
+    font-size: .85em
     +media-breakpoint-up(md)
-        font-size: 16px
+        font-size: 1rem
 *
     font-family: 'AvenirNextLTPro-Regular'
 h1, h2, h3, h4, h5, h6
