--- a/sass/yofisio/components/header.sass
+++ b/sass/yofisio/components/header.sass
@@ -71,5 +71,6 @@
   h1
     font-size: 2.5rem 
     text-shadow: 2px 2px 5px rgba(255,255,255,.23)!important
+    word-break: break-word
     +media-breakpoint-up(sm)
       font-size: 3.5rem
