--- a/sass/yofisio/components/phone-cta.sass
+++ b/sass/yofisio/components/phone-cta.sass
@@ -1,30 +1,37 @@
 #phone-fixed
   z-index: 1001!important
   position: fixed
-  bottom: 50px
+  bottom: 40px
   right: -30px
   box-shadow: 2px 2px 5px rgba(0,0,0,.23)!important
-  .btn-cool 
+  .btn-cool
     text-align: left
-    height: 70px
+    height: 60px
     padding-right: 50px
     position: relative
     text-shadow: 1px 1px 2px rgba(255,255,255,.1)
     color: rgba(255,255,255,.9)
     border-radius: 0px
     transition: all .3s ease-in
+    +media-breakpoint-up(md)
+      height: 70px
     i
       position: absolute
       left: 0px
       top: 0px
-      font-size: 35px
+      font-size: 30px
+      height: 60px
+      width: 60px
+      line-height: 60px
       display: block
-      height: 70px
-      width: 70px
       vertical-align: middle
-      line-height: 70px
       text-align: center
       background-color: rgba(0,0,0,.1)
+      +media-breakpoint-up(md)
+        font-size: 35px
+        height: 70px
+        width: 70px
+        line-height: 70px
     small
       display: block
     div
@@ -34,5 +41,7 @@
       text-shadow: 1px 1px 2px rgba(255,255,255,.5)
       transition: all .2s ease-in
       i
-        font-size: 50px
+        font-size: 42px
         transition: all .2s ease-in
+        +media-breakpoint-up(md)
+          font-size: 50px
