Facilities leyend styles

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -27,6 +27,7 @@ section
 @import "components/breadcrumbs"
 @import "components/phone-cta"
 @import "components/content-header"
+@import "components/facilities"
 @import "components/comments"
 @import "components/blog-grid"
 @import "components/blog-nav"
