--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -60,6 +60,7 @@ section
     bottom: 0!important
     left: 0!important
     right: 0!important
+    z-index: -1
 
 @for $i from 1 through 10
     .overlay-#{$i}
@@ -105,6 +106,7 @@ section
 
 .jumbotron 
     padding: 2rem 0rem
+    z-index: -5
 
 +media-breakpoint-down(md) 
     .card-deck
