--- a/sass/yofisio/components/header.sass
+++ b/sass/yofisio/components/header.sass
@@ -68,6 +68,21 @@
 .jumbotron 
   background-repeat: no-repeat
   border-radius: 0
+  .overlay
+    img
+      object-fit: cover
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      bottom: 0
+      left: 0
+      right: 0
+      z-index: 0
+    &.top
+      object-position: 0 50%
+    &.bottom
+      object-position: 100% 50%
   h1
     font-size: 2.5rem 
     text-shadow: 2px 2px 5px rgba(255,255,255,.23)!important
