--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -34,6 +34,9 @@
     background-repeat: no-repeat
     background-size: cover
     background-position: center
+    .overlay
+      img
+        object-fit: cover
     time
       position: absolute
       bottom: 0
