--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -37,6 +37,8 @@
     .overlay
       img
         object-fit: cover
+        width: 100%
+        height: 100%
     time
       position: absolute
       bottom: 0
