--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -2,6 +2,7 @@
 +fontFace('AvenirNextLTPro-Regular','../fonts/AvenirNextLTPro-Regular')
 +fontFace('AvenirNextLTPro-Cn','../fonts/AvenirNextLTPro-Cn')
 +fontFace('AvenirNextLTPro-Bold','../fonts/AvenirNextLTPro-Bold')
++fontFace('AvenirNextLTPro-Demi','../fonts/AvenirNextLTPro-Demi')
 
 html
     overflow-x: hidden
@@ -10,6 +11,8 @@ html
         font-size: 1rem
 *
     font-family: 'AvenirNextLTPro-Regular'
+strong
+    font-family: 'AvenirNextLTPro-Demi'
 h1, h2, h3, h4, h5, h6
     color: $inverted
     font-family: 'AvenirNextLTPro-Bold'
@@ -96,13 +99,16 @@ section
         font-family: AvenirNextLTPro-Cn
 
 .highlight
+    font-family: AvenirNextLTPro-Demi
     text-align: center
-    font-weight: 700
+    font-weight: 400
     padding: .5rem 1rem
     margin-bottom: 1rem
     font-variant: small-caps
     background-color: rgba($brand-info, 0.65)!important
     color: #fff
+    strong
+        font-family: AvenirNextLTPro-Bold
 
 .jumbotron 
     padding: 2rem 0rem
