Images and shadows

--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -165,7 +165,15 @@ section
 .zoomOutLeft, .zoomInLeft, .zoomOutRight, .zoomInRight
     animation-duration: .3s
 
-.card, section h2, section img, .highlight, .map, main.container-main article
+.card, .wrapper h2, .wrapper img, .highlight, .map, main.container-main article
     box-shadow: 2px 2px 5px rgba(0,0,0,.23)!important
+
+.alignright
+    margin-left: 10px
+    padding: 0!important
+.alignleft
+    margin-right: 10px
+    padding: 0!important
+
 .map img
     box-shadow: none!important
