--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -9,7 +9,7 @@ html
     font-size: .85em
     +media-breakpoint-up(md)
         font-size: 1rem
-*
+*:not(span)
     font-family: 'AvenirNextLTPro-Regular'
 strong
     font-family: 'AvenirNextLTPro-Demi'
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6
     font-family: 'AvenirNextLTPro-Bold'
 h1, h2
     font-variant: small-caps
-.wrapper
+.wrapper, .container, :not(footer)
     p:not(.h1):not(.h2):not(.h3):not(.h4):not(.h5):not(.h6), li
         +media-breakpoint-up(md)
             text-align: justify
