--- a/sass/yofisio/components/facilities.sass
+++ b/sass/yofisio/components/facilities.sass
@@ -24,6 +24,8 @@ figure.wp-caption
     right: 0
     left: 0
     margin-bottom: 1rem
+    margin-left: 1rem
+    margin-right: 1rem
     color: #fff
     font-size: 1.25rem
     opacity: 0
