--- a/sass/yofisio/components/testimonios.sass
+++ b/sass/yofisio/components/testimonios.sass
@@ -1,50 +1,74 @@
+.testimonios
+  .testimonio
+    &:nth-child(1)
+      .card
+        background-color: #40A1DF
+    &:nth-child(2)
+      .card
+        background-color: #1E79B4
+    &:nth-child(3)
+      .card
+        background-color: #2A96DB
+    &:nth-child(4)
+      .card
+        background-color: #175C89
+    .card
+      height: 100%
+      border-radius: 0
+      border: none
+      .row
+        margin: 0
+  p
+    margin-bottom: .5rem
 
-.testimonio
-  margin-bottom: 1rem
-  &-section
-    &:after
-      top: 100%
-      left: 50px
-      border: solid transparent
-      content: " "
-      position: absolute
-      border-width: 15px
-      margin-left: -15px
+.testimonio-name
+  margin: 1.5em 0 1em 0
+  &-name
+    font-size: 1.2em
+  &-name, &-designation, &-treatment
+    text-align: center!important
 
-  &-desc
-    margin-top: 20px
-    text-align: left
-    padding-left: 15px
-    img
-      border: 1px solid #f5f5f5
-      border-radius: 150px
-      height: 70px
-      padding: 3px
-      width: 70px
-      display: inline-block
-      vertical-align: top
+.testimonio-img
+  img
+    +media-breakpoint-down(xs)
+      margin: 0 calc(50% - 75px)
+  position: relative
+  margin: 1.5em auto 2em auto
+  +media-breakpoint-up(md)
+    margin: 1.5em 0 2em 0
+  .testimonio-icon
+    width: 3em
+    height: 3em
+    border-radius: 1.5em
+    position: absolute
+    left: calc(50% - 1.5em)
+    bottom: -1.5em
+    background-color: rgba(#fff, .85)
+    color: $brand-primary
+    i.fa
+      width: 3em
+      height: 3em
+      line-height: 3em
+      text-align: center
+      margin: auto
+      &:before
+        font-size: 2em
 
-  &-writer
-    display: inline-block
-    vertical-align: top
-    padding-left: 10px
-    &-name
-      font-weight: bold
-    &-designation, &-company
-      font-size: 85%
+.testimonio-text
+  position: relative
+  text-align: left
+  &:before
+    font-family: "FontAwesome"
+    content: "\f10d"
+    line-height: 1em
+    position: absolute
+    font-size: 4em
+    z-index: 0
+    opacity: .4
+    left: 0
+  p
+    color: #fff
+    z-index: 1
+    margin-top: 1em
+    margin-left: 0
 
-/*---- Outlined Styles ----
-
-.testimonio
-  &.testimonio-info
-    .testimonio-section
-      &:after
-        border-top-color: $brand-info
-    .testimonio-desc img
-      border-color: $brand-info
-      background-color: $brand-info
-    .testimonio-writer-name
-      color: $brand-info
-
-
-/*---- Filled Styles ----
