--- a/sass/yofisio/components/testimonios.sass
+++ b/sass/yofisio/components/testimonios.sass
@@ -72,3 +72,65 @@
     margin-top: 1em
     margin-left: 0
 
+.service
+  margin-bottom: 1rem
+  text-align: center
+  .card
+    position: relative
+    overflow: hidden
+    margin-bottom: 1rem
+    border: none
+    .overlay
+      z-index: 0
+      &.bg-gradient
+        z-index: 2!important
+      img
+        z-index: 0
+        object-fit: cover
+        width: 100%
+        height: 100%
+    &:before
+      content: ""
+      display: block
+      padding-top: 70%
+    .card-img-overlay
+      display: flex
+      justify-content: center
+      align-content: center
+      flex-direction: column
+      a
+        font-weight: 600
+        position: relative
+        z-index: 2
+        color: #fff
+        text-shadow: -1px 2px 0 rgba(0,0,0,.23)
+        &:hover
+          color: $brand_primary
+          text-decoration: none
+        
+
+
+.razones
+  padding: 2rem 0
+  .h5
+    color: #fff!important
+    text-align: center!important
+    min-height: 2.2em
+    display: flex
+    align-items: center
+    justify-content: center
+  .number-icon
+    text-align: center!important
+    width: 3em
+    margin: 1rem auto
+    height: 3em
+    line-height: 3em
+    font-size: 2em
+    background-color: rgba(255,255,255,.85)
+    border-radius: 50%
+    text-shadow: -1px 2px 0 rgba(0,0,0,.23)
+    font-weight: 600
+    color: $brand-primary
+  .overlay
+    img
+      object-position: 0% 80%
