--- a/sass/yofisio/_styles.sass
+++ b/sass/yofisio/_styles.sass
@@ -68,6 +68,15 @@ section
     left: 0!important
     right: 0!important
     z-index: -1
+    overflow: hidden
+    img
+        object-fit: cover
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        bottom: 0
+        left: 0
 
 @for $i from 1 through 10
     .overlay-#{$i}
@@ -117,7 +126,7 @@ section
 
 .jumbotron 
     padding: 2rem 0rem
-    z-index: -5
+    z-index: 0
 
 +media-breakpoint-down(md) 
     .card-deck
@@ -223,3 +232,6 @@ section
     .perfect-pullquote
         border-left: .33rem solid rgba($brand-warning, .85)!important
 
+
+.is-inline
+    display: inline
